show statistics to polls

--- a/assets/css/main.less
+++ b/assets/css/main.less
@@ -246,7 +246,26 @@ tr.angular-ui-tree-empty {
 .separated-line{
     border-bottom:1px solid #e7e7e7
 }
+.view-poll{
+    p{
+        &.bg-warning{
+            padding: 15px;
+        }
+    }
+    .user-response{
+        border-bottom: 1px solid #ddd;
+        background-color: #f9f9f9;
+    }
+    .show-answers{
+        .title{
+            min-height: 40px;
+            margin-bottom: 40px;
+            padding-left: 35px;
+            margin-top: 40px;
+        }
+    }
 
+}
 // Image Review
 .image-review{
     // img{width: 100%;}
