Fixing general bugs

--- a/assets/modules/credit/views/form.html
+++ b/assets/modules/credit/views/form.html
@@ -81,7 +81,7 @@
 
         <div class="dinamyc-forms">
 
-            <label class="control-label">Campos Dinamicos</label>
+            <label class="control-label">Campos Dinámicos</label>
 
         	<div class="row" ng-repeat="item in credit.hstore">
                 <div class="form-group col-xs-3">
@@ -102,6 +102,7 @@
 
             <div class="row">
                 <div class="form-group col-xs-8">
+                    <button type="button" class="btn btn-success" ng-click="credit.addHStore()">Agregar</button>
                 </div>
             </div>
 
