--- a/assets/modules/poll/views/form.html
+++ b/assets/modules/poll/views/form.html
@@ -1,9 +1,9 @@
-<h1>{{action == "new" ? "Nuevo" : "Editar"}} Encuesta</h1>
+<h1>{{poll.action == "new" ? "Nueva" : "Editar"}} Encuesta</h1>
 
 <ol class="breadcrumb">
 	<li><a href="#">Inicio</a></li>
 	<li><a href="#/cooperative/polls">Encuestas</a></li>
-	<li class="active">{{poll.action == "new" ? "Nuevo" : "Editar"}}</li>
+	<li class="active">{{poll.action == "new" ? "Nuevo" : "Editar"}}</li>{{poll.action}}
 </ol>
 
 <div ng-show="poll.form.success">
@@ -83,7 +83,7 @@
         </div> 
     </div>
     <!-- New Question -->
-    <form novalidate name="questi" class="form" ng-submit="answerToQuestion(quest, 'new')">
+    <form novalidate name="questi" class="form" ng-submit="answerToQuestion(quest, 'new')" ng-hide="poll.action == 'new'">
         <h3>Nueva Pregunta</h3>
         <div class="row">
             <div class="form-group col-xs-8">
@@ -91,7 +91,7 @@
                 <input type="text" class="form-control" required name="content" ng-model="quest.content">        
             </div>
             <div class="form-group col-xs-8">
-                <label class="control-label">Tipo de pregunta:</label>{{quest.actualType}}
+                <label class="control-label">Tipo de pregunta:</label>
                 <select class="form-control" required ng-model="quest.actualType" ng-options="actualType.name for actualType in typePoll" ng-change="showOptions(quest.actualType)">
                 </select>
             </div>
@@ -120,33 +120,33 @@
             <div class="row">
                 <div class="form-group col-xs-8">
                     <label class="control-label">Enunciado de la pregunta:</label>
-                    <input type="text" class="form-control" required name="content" ng-model="quest.content">
+                    <input type="text" class="form-control" required name="content" ng-model="quest.content" ng-disabled="disable">
                     <input type="hidden" ng-model="quest.id">
                 </div>
                 <div class="form-group col-xs-8">
                     <label class="control-label">Tipo de pregunta:</label>
-                    <select class="form-control" required ng-model="quest.actualType" ng-options="type.name for type in typePoll" ng-change="showOptions(quest.actualType)">
+                    <select class="form-control" required ng-model="quest.actualType" ng-options="type.name for type in typePoll" ng-change="showOptions(quest.actualType)" ng-disabled="disable">
                     </select>
                     <div class="row">
                         <div class="form-group col-xs-6" ng-if="quest.actualType.id == 2 || quest.actualType.id == 3" ng-repeat="options in quest.option_set">
                             <h6>Opciones de respuesta</h6>
-                            <input type="text" class="form-control" name="options" ng-model="options.content">
+                            <input type="text" class="form-control" name="options" ng-model="options.content" ng-disabled="disable">
                         </div>
                     </div>
                     <div class="row" ng-if="addOptions">
                         <div class="form-group col-xs-6" ng-if="quest.actualType.id == 2 || quest.actualType.id == 3">
                             <h6>Opciones de respuesta</h6>
-                            <input type="text" class="form-control" name="options" ng-model="quest.option1">
+                            <input type="text" class="form-control" name="options" ng-model="quest.option1" ng-disabled="disable">
                         </div>
                         <div class="form-group col-xs-6" ng-if="quest.actualType.id == 2 || quest.actualType.id == 3">
                             <h6>Opciones de respuesta</h6>
-                            <input type="text" class="form-control" name="options" ng-model="quest.option2">
+                            <input type="text" class="form-control" name="options" ng-model="quest.option2" ng-disabled="disable">
                         </div>
                     </div>
                     <div class="row">
                         <div class="form-group col-xs-12 save-poll">
-                            <button type="submit" class="btn btn-primary">Guardar</button>
-                            <button type="button" class="btn btn-primary" ng-click="deleteQuestion(quest.id)">Borrar</button>
+                            <button type="submit" class="btn btn-primary" ng-disabled="disable">Guardar</button>
+                            <button type="button" class="btn btn-primary" ng-click="deleteQuestion(quest.id)" ng-disabled="disable">Borrar</button>
                             <hr class="separated-line">
                         </div>
                     </div>
