--- a/assets/modules/poll/views/form.html
+++ b/assets/modules/poll/views/form.html
@@ -98,7 +98,7 @@
         </div>
         <div class="row" ng-if="optionsAnswer == 1">
             <div class="form-group col-xs-4">
-                <label class="control-label">Escribe la segunda opción</label>
+                <label class="control-label">Escribe la primera opción</label>
                 <input type="text" class="form-control" name="option2" ng-model="quest.option1">
             </div>
             <div class="form-group col-xs-4">
