filter results only by closed questions

--- a/assets/modules/poll/views/form.html
+++ b/assets/modules/poll/views/form.html
@@ -2,7 +2,7 @@
 
 <ol class="breadcrumb">
 	<li><a href="#">Inicio</a></li>
-	<li><a href="#/cooperative/polls">Encuestas</a></li>
+	<li><a href="#/poll">Encuestas</a></li>
 	<li class="active">{{poll.action == "new" ? "Nuevo" : "Editar"}}</li>{{poll.action}}
 </ol>
 
