--- a/assets/modules/poll/views/list.html
+++ b/assets/modules/poll/views/list.html
@@ -2,7 +2,7 @@
 
 <ol class="breadcrumb">
 	<li><a href="#">Inicio</a></li>
-  <li><a href="#/poll/list">Encuestas</a></li>  
+  <li><a href="#/poll">Encuestas</a></li>  
 </ol>
 
 <list-view 
