--- a/assets/modules/poll/views/questions.html
+++ b/assets/modules/poll/views/questions.html
@@ -2,7 +2,7 @@
 
 <ol class="breadcrumb">
 	<li><a href="#">Inicio</a></li>
-	<li><a href="#/cooperative/polls">Asociados</a></li>
+	<li><a href="#/polls">Asociados</a></li>
 	<li class="active">{{poll.action == "new" ? "Nuevo" : "Editar"}}</li>
 </ol>
 
