--- a/assets/modules/poll/views/view.html
+++ b/assets/modules/poll/views/view.html
@@ -9,6 +9,7 @@
   <div class="row">
     <div class="col-md-3 col-md-offset-9">
       <button type="button" class="btn btn-success" ng-click="downloadCvs()">Descargar</button>
+      <iframe id="my_iframe" style="display:none;"></iframe>
     </div>
   </div>
   <p class="bg-warning" ng-show="messagePoll">Esta encuesta aún no tiene preguntas</p>
