--- a/assets/modules/poll/views/form.html
+++ b/assets/modules/poll/views/form.html
@@ -105,6 +105,19 @@
                 <label class="control-label">Escribe la segunda opción</label>
                 <input type="text" class="form-control" name="option2" ng-model="quest.option2">
             </div>
+            <div class="form-group col-xs-4">
+                <label class="control-label">Escribe la tercera opción</label>
+                <input type="text" class="form-control" name="option3" ng-model="quest.option3">
+            </div>
+            <div class="form-group col-xs-4">
+                <label class="control-label">Escribe la cuarta opción</label>
+                <input type="text" class="form-control" name="option4" ng-model="quest.option4">
+            </div>
+            <div class="form-group col-xs-4">
+                <label class="control-label">Escribe la quinta opción</label>
+                <input type="text" class="form-control" name="option5" ng-model="quest.option5">
+            </div>
+
         </div>
         <div class="row">
             <div class="form-group col-xs-8 save-poll">
