Uploading new urls to login, users and news

--- a/assets/modules/notification/views/list.html
+++ b/assets/modules/notification/views/list.html
@@ -17,7 +17,7 @@
 
     actions="['add', 'edit', 'delete', 'search']"
 
-    rest="notification_client"
+    rest="notification"
 
     query-params="type=1"
      default-order="-add_date"
