endpoints to notifications, users, groups and credits

--- a/assets/modules/credit/views/list.html
+++ b/assets/modules/credit/views/list.html
@@ -7,7 +7,7 @@
 
 <list-view 
     fields="[
-        {'name':'code', 'label':'Código', 'type': 'string'},
+        {'name':'id', 'label':'Código', 'type': 'string'},
         {'name':'name', 'label':'Nombre', 'type': 'string', width:'40'},
         {'name':'rate', 'label':'Tasa', 'type': 'string'},
         {'name':'insurance', 'label':'Seguro', 'type': 'string'},
