--- a/assets/modules/notification/views/form.html
+++ b/assets/modules/notification/views/form.html
@@ -142,7 +142,7 @@
                     <div class="row">
                         <div class="form-group col-sm-6">
                             <label for="inputEmail3" class="control-label">Agregar asociados por grupo</label>
-                            <select class="form-control" ng-model="notification.data.group" ng-change="notification.addUserByGroup()">
+                            <select class="form-control" ng-model="notification.data.group_id" ng-change="notification.addUserByGroup()">
                                 <option value="{{key}}" ng-repeat="(key,val) in notification.groups">{{val.name}}</option>
                             </select>
                         </div>
