--- a/assets/modules/credit/views/form.html
+++ b/assets/modules/credit/views/form.html
@@ -79,6 +79,13 @@
             </div>
         </div>
 
+        <access-level
+            accessLevel="[
+                {'private': credit.accessLevel.private, 'semiPublic': accessLevel.semiPublic, 'public': accessLevel.public}
+            ]"
+        >
+        </access-level>
+
         <div class="dinamyc-forms">
 
             <label class="control-label">Campos Dinámicos</label>
