--- a/assets/modules/notification/views/form.html
+++ b/assets/modules/notification/views/form.html
@@ -114,6 +114,7 @@
             </div>
 
             <!-- <div ng-show="notification.action == 'new'"> -->
+                {{notification.accessLevel}}
             <div >
                 <access-level
                     accessLevel="[
