--- a/assets/modules/poll/views/list.html
+++ b/assets/modules/poll/views/list.html
@@ -7,9 +7,9 @@
 
 <list-view 
     fields="[
-        {'name':'name', 'label':'Título', 'type': 'string', width:'40'},
-        {'name':'email', 'label':'Fecha', 'type': 'string'},
-        {'name':'type_field', 'label':'Tipo', 'type': 'string'},
+        {'name':'title', 'label':'Título', 'type': 'string', width:'40'},
+        {'name':'date_start', 'label':'Fecha', 'type': 'string'},
+        {'name':'state_display', 'label':'Estado', 'type': 'string'},
     ]"
 
     filters="['search']" 
