access level in notifications

--- a/assets/modules/credit/views/form.html
+++ b/assets/modules/credit/views/form.html
@@ -81,7 +81,7 @@
 
         <access-level
             accessLevel="[
-                {'private': credit.accessLevel.private, 'semiPublic': accessLevel.semiPublic, 'public': accessLevel.public}
+                {'private': accessLevel.private, 'semiPublic': accessLevel.semiPublic, 'public': accessLevel.public}
             ]"
         >
         </access-level>
