--- a/assets/modules/notification/views/form.html
+++ b/assets/modules/notification/views/form.html
@@ -102,6 +102,7 @@
 
             <div class="row">
                 <div class="form-group col-sm-12">
+                        {{notification.data.content}}
                     <label for="inputEmail3" class="control-label">Contenido</label>
                     <textarea ui-tinymce="notification.tinymceOptions" name="content" class="form-control" rows="6" ng-model="notification.data.content" required>{{notification.data.content}}</textarea>
 
@@ -114,7 +115,6 @@
             </div>
 
             <!-- <div ng-show="notification.action == 'new'"> -->
-                {{notification.accessLevel}}
             <div >
                 <access-level
                     accessLevel="[
