--- a/assets/modules/home/views/home.html
+++ b/assets/modules/home/views/home.html
@@ -9,7 +9,7 @@
 </div>
 
 
-<div id="statistic-page">
+<!-- <div id="statistic-page">
  
     <ul class="data-general">
 
@@ -53,7 +53,7 @@
     <div ng-if="!home.show_statistics">        
         <h3> ¡Estadisticas no Diponibles!  </h3>
     </div>
-    <div id="time-chart" style="height: 250px;" ng-show="home.show_statistics"></div>
+    <div id="time-chart" style="height: 250px;" ng-show="home.show_statistics"></div> -->
      
     
    
