--- a/assets/modules/notification/views/form.html
+++ b/assets/modules/notification/views/form.html
@@ -124,15 +124,15 @@
                 </access-level>
                 <div class="row">
                     <div class="form-group col-sm-10">
-                        <label for="inputEmail3" class="control-label">Tipo de notificación</label>
+                        <label for="inputEmail3" class="control-label">Enviar notificación a:</label>
 
                         <div class="radio">
                             <label class="radio-inline">
-                                <input type="radio" ng-model="notification.data.public" name="type" value="1"> Pública
+                                <input type="radio" ng-model="notification.data.public" name="type" value="1"> Todos
                              </label>
 
                            <label class="radio-inline">
-                                <input type="radio" ng-model="notification.data.public" name="type" value="0"> Privada
+                                <input type="radio" ng-model="notification.data.public" name="type" value="0"> Grupos
                             </label>
                         </div>
 
