hidding items from home and navbar

--- a/assets/modules/home/views/home.html
+++ b/assets/modules/home/views/home.html
@@ -7,9 +7,9 @@
     <h1>Bienvenido {{home.username}} </h1>
     <p>Su último inicio de sesión fue el {{home.last_login | date:'dd/MM/yyyy  HH:mm:ss'}}</p>
 </div>
+<!-- 
 
-
-<!-- <div id="statistic-page">
+<div id="statistic-page">
  
     <ul class="data-general">
 
@@ -53,11 +53,11 @@
     <div ng-if="!home.show_statistics">        
         <h3> ¡Estadisticas no Diponibles!  </h3>
     </div>
-    <div id="time-chart" style="height: 250px;" ng-show="home.show_statistics"></div> -->
+    <div id="time-chart" style="height: 250px;" ng-show="home.show_statistics"></div> 
      
     
    
-</div>
+</div> -->
 
 <!-- Email information -->
 <div class="col-md-12">
