--- a/assets/modules/page/views/list.html
+++ b/assets/modules/page/views/list.html
@@ -104,17 +104,15 @@
             <input type="checkbox" ng-model="pageList.data.published">
         </div>
 
-
         <div  ng-show="pageList.data.type == 2">
             <div class="form-group col-sm-12">
                 <label for="inputEmail3" class="control-label">Contenido</label>
                 <textarea ui-tinymce="pageList.tinymceOptions" name="content" class="form-control" rows="6" ng-model="pageList.data.content"></textarea>
             </div>
         </div>
-
-     
-        
-     
+        <div>
+            <access-level level="accessLevel" lvl="pageList.data.access_level"></access-level>
+        </div>
 
       <div class="row">
         <div class="form-group col-xs-12">
