--- a/assets/modules/home/views/home.html
+++ b/assets/modules/home/views/home.html
@@ -7,7 +7,7 @@
     <h1>Bienvenido {{home.username}} </h1>
     <p>Su último inicio de sesión fue el {{home.last_login | date:'dd/MM/yyyy  HH:mm:ss'}}</p>
 </div>
-<!-- 
+
 
 <div id="statistic-page">
  
@@ -57,7 +57,7 @@
      
     
    
-</div> -->
+</div>
 
 <!-- Email information -->
 <div class="col-md-12">
