--- a/assets/modules/notification/views/form.html
+++ b/assets/modules/notification/views/form.html
@@ -137,8 +137,8 @@
                     <div class="row">
                         <div class="form-group col-sm-6">
                             <label for="inputEmail3" class="control-label">Agregar asociados por grupo</label>
-                            <select class="form-control" ng-model="notification.data.group_id" ng-change="notification.addUserByGroup()">
-                                <option value="{{key}}" ng-repeat="(key,val) in notification.groups">{{val.name}}</option>
+                            <select class="form-control" ng-model="notification.groups.id" ng-change="notification.addUserByGroup(notification.data.group_id)">
+                                <option value="{{val.id}}" ng-repeat="(key,val) in notification.groups">{{val.name}}</option>
                             </select>
                         </div>
                     </div>
