--- a/assets/modules/notification/views/list.html
+++ b/assets/modules/notification/views/list.html
@@ -4,7 +4,7 @@
 	<li><a href="#">Inicio</a></li>
 	<li class="active">Notificaciones</li>
 </ol>
-
+{{notification.data}}
 <list-view 
     fields="[
         {'name':'title', 'label':'Título', 'type': 'string', width:'40'},
