--- a/assets/modules/notification/views/list.html
+++ b/assets/modules/notification/views/list.html
@@ -5,6 +5,8 @@
 	<li class="active">Notificaciones</li>
 </ol>
 {{notification.data}}
+{{algo}}
+asdf
 <list-view 
     fields="[
         {'name':'title', 'label':'Título', 'type': 'string', width:'40'},
