--- a/assets/modules/notification/views/form.html
+++ b/assets/modules/notification/views/form.html
@@ -164,7 +164,7 @@
                         </div>
                     </div>
 
-                    <div ng-show="notification.autocomplete.list.0">
+                    <!-- <div ng-show="notification.autocomplete.list.0">
                         <div class="row">
                             <div class="form-group col-sm-12">
                                 <label for="inputEmail3" class="control-label">Lista de destinatarios</label>
@@ -192,7 +192,7 @@
                                 </div>                                
                             </div>
                         </div>
-                    </div>
+                    </div> -->
                 </div>
 
                 <div class="row">
