--- a/assets/modules/page/views/list.html
+++ b/assets/modules/page/views/list.html
@@ -17,7 +17,7 @@
     <a class="" ng-if="node.type==2" data-nodrag ng-click="toggle(this)"><span
         class="glyphicon glyphicon-align-justify"></span></a>
     
-    {{node.title}} <span ng-if="!node.published" class="glyphicon glyphicon-eye-close" style="color: red;"aria-hidden="true"></span>
+    {{node.title}}
     
     <a class="pull-right btn btn-danger btn-xs" data-nodrag ng-click="pageList.removing(this, node.id)"><span
         class="glyphicon glyphicon-remove"></span></a>
