--- a/assets/modules/cooperative/views/email-list.html
+++ b/assets/modules/cooperative/views/email-list.html
@@ -16,39 +16,7 @@
 
     actions="['add', 'edit', 'delete']"
     
-    rest="cooperative/email"
+    rest="entity/email"
     >
     
 </list-view>
-
-
-<!-- 
-<p class="pull-right">
-    <a href="#/cooperative/email/new" class="btn btn-success">Nuevo correo</a>
-</p>
-
-<table class="table table-hover">
-    <thead>
-        <tr>
-            <th width="40%">Nombre</th>
-            <th>Email</th>
-            <th></th>
-        </tr>
-    </thead>
-    <tbody>
-        <tr ng-repeat="email in emailList.list">
-            <td>{{email.name}}</td>
-            <td>{{email.email}}</td>
-            <td class="text-right">
-                <a href="#/cooperative/email/edit/{{email.id}}" class="btn btn-primary btn-sm">
-                    <span class="glyphicon glyphicon-pencil"></span>
-                </a>
-
-                <button ng-click="emailList.delete(email.id, $event)" type="button" class="btn btn-danger btn-sm">
-                    <span class="glyphicon glyphicon-remove"></span>
-                </button>
-            </td>
-        </tr>
-    </tbody>
-</table>
- -->
