notifications, pages, mails

--- a/assets/modules/cooperative/views/email-form.html
+++ b/assets/modules/cooperative/views/email-form.html
@@ -58,7 +58,8 @@
                 </div>
             </div>
         </div>
-
+        
+        <access-level level="accessLevel" lvl="email.data.access_level"></access-level>
 
     	<div class="row">
     		<div class="form-group col-xs-12">
