--- a/assets/modules/notification/views/list.html
+++ b/assets/modules/notification/views/list.html
@@ -8,9 +8,9 @@
 <list-view 
     fields="[
         {'name':'title', 'label':'Título', 'type': 'string', width:'40'},
-        {'name':'observation', 'label':'Descripción', 'type': 'string'},
+        {'name':'observation', 'label':'Comentario', 'type': 'string'},
         {'name':'add_date', 'label':'Fecha', 'type': 'date'},
-        {'name':'public', 'label':'Publicado', 'type': 'bool'},        
+        {'name':'access_level', 'label':'Nivel de permisos', 'type': 'string'},        
     ]"
 
     filters="['search']" 
