--- a/assets/modules/cooperative/views/email-form.html
+++ b/assets/modules/cooperative/views/email-form.html
@@ -59,7 +59,7 @@
             </div>
         </div>
         
-        <access-level level="accessLevel" lvl="email.data.access_level"></access-level>
+        <access-level level="accessLevel" lvl="email.data.access_level" section="true"></access-level>
 
     	<div class="row">
     		<div class="form-group col-xs-12">
