--- a/assets/modules/notification/views/form.html
+++ b/assets/modules/notification/views/form.html
@@ -115,7 +115,7 @@
 
             <!-- <div ng-show="notification.action == 'new'"> -->
             <div >
-                <access-level level="accessLevel" lvl="notification.data.access_level"></access-level>
+                <access-level level="accessLevel" lvl="notification.data.access_level" section="true"></access-level>
                 <div class="row">
                     <div class="form-group col-sm-10">
                         <label for="inputEmail3" class="control-label">Enviar notificación a:</label>
