--- a/assets/modules/cooperative/views/social-form.html
+++ b/assets/modules/cooperative/views/social-form.html
@@ -50,7 +50,7 @@
         </div>
 
         <div class="form-group">
-            <label for="inputEmail3" class="col-sm-2 control-label">Tipo de Red {{social.data.type_selected}}</label>
+            <label for="inputEmail3" class="col-sm-2 control-label">Tipo de Red</label>
             <div class="col-sm-10">
                 <select class="form-control" ng-options="item as item.display_name for item in social.data.options track by item.value" ng-model="social.data.type_selected"  required="true">                    
                     <option value="">Seleccione una red social</option>
@@ -63,7 +63,7 @@
             </div>
         </div>
 
-        <access-level level="accessLevel" lvl="social.data.access_level"></access-level>
+        <access-level level="accessLevel" lvl="social.data.access_level" section="true"></access-level>
 
         <div class="form-group">
             <div class="col-sm-offset-2 col-sm-10">
