--- a/assets/modules/credit/views/form.html
+++ b/assets/modules/credit/views/form.html
@@ -39,6 +39,16 @@
         </div>
 
         <div class="row">
+            <div class="form-group col-sm-8">
+                <label class="control-label">Crédito Padre</label>{{credit.data.parent}}
+                <select class="form-control" ng-model="credit.data.parent">
+					<option value="">Sin padre</option>
+					<option value="{{val.id}}" ng-repeat="(key,val) in credit.parents">{{val.name}}</option>
+				</select>
+            </div>
+        </div>
+
+        <div class="row">
             <div class="form-group col-sm-1">
                 <label for="inputEmail3" class="control-label">Posición</label>
                 <input name="position" type="input" class="form-control" ng-model="credit.data.position" placeholder="0">
@@ -79,12 +89,7 @@
             </div>
         </div>
 
-        <access-level
-            accessLevel="[
-                {'private': accessLevel.private, 'semiPublic': accessLevel.semiPublic, 'public': accessLevel.public}
-            ]"
-        >
-        </access-level>
+        <access-level level="accessLevel" lvl="credit.data.access_level" section="false"></access-level>
 
         <div class="dinamyc-forms">
 
