--- a/assets/modules/home/views/navbar.html
+++ b/assets/modules/home/views/navbar.html
@@ -65,12 +65,12 @@
                 </ul>
             </li>
 
-            <li class="dropdown">
+            <!-- <li class="dropdown">
                 <a href="" data-toggle="dropdown">Tareas <span class="caret"></span></a>
                 <ul class="dropdown-menu" role="menu">
                     <li><a href="#/tasks/status">Ver estados</a></li>
                 </ul>
-            </li>
+            </li> -->
         </ul>
         
         <ul class="nav navbar-nav navbar-right" >
