--- a/assets/css/main.less
+++ b/assets/css/main.less
@@ -26,6 +26,11 @@ body {
 .navbar-brand-header{
     padding-top: 8px;
     display: inline-flex;
+    font-family: 'Roboto', sans-serif;
+    font-weight: bold;
+    line-height: 32px;
+    font-size: 1.3em;
+    color: #5d5d5d;
     img{
         height:30px;
     }
