--- a/assets/modules/home/views/home.html
+++ b/assets/modules/home/views/home.html
@@ -3,7 +3,7 @@
     <img src="{{home.MEDIA}}/{{home.cooperative_data.logo}}" alt="Logo" class="pull-right"  height="41"/>        
 </div>
 <div class="user-box ">    
-    <span class="glyphicon glyphicon-user" aria-hidden="true"></span>     
+    <!-- <span class="glyphicon glyphicon-user" aria-hidden="true"></span>      -->
     <h1>Bienvenido {{home.username}} </h1>
     <p>Su último inicio de sesión fue el {{home.last_login | date:'dd/MM/yyyy  HH:mm:ss'}}</p>
 </div>
