--- a/assets/modules/page/views/list.html
+++ b/assets/modules/page/views/list.html
@@ -77,7 +77,7 @@
                     </small>
                 </div>
                 <select name="type" ng-model="pageList.data.type" class="form-control" required>
-                    <option value="">Selecicone</option>
+                    <option value="">Seleccione</option>
                     <option value="1">Categoria</option>
                     <option value="2">Contenido</option>
                 </select>
