--- a/assets/modules/home/views/navbar.html
+++ b/assets/modules/home/views/navbar.html
@@ -9,7 +9,7 @@
             <span class="icon-bar"></span>
         </button>
         <a class="navbar-brand-header" href="#/">
-            <svg class="asociados-logo"  xmlns:x="&ns_extend;" xmlns:i="&ns_ai;" xmlns:graph="&ns_graphs;" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="0 0 45.6 49.3" enable-background="new 0 0 45.6 49.3" xml:space="preserve">
+            <!-- <svg class="asociados-logo"  xmlns:x="&ns_extend;" xmlns:i="&ns_ai;" xmlns:graph="&ns_graphs;" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="0 0 45.6 49.3" enable-background="new 0 0 45.6 49.3" xml:space="preserve">
                 <metadata>
                     <sfw  xmlns="&ns_sfw;">
                         <slices></slices>
@@ -25,7 +25,8 @@
                     <path data-start="60" data-duration="00" stroke="#558C38" fill="#67B346" d="M45.1,37.4c0.5-2.6-1.3-8.4-2.2-10.2c-14.3,7.4-26.1,4.4-28.2,4c-1.2,5.6-1.3,10.1-1.3,10.1 S29.4,44.5,45.1,37.4z"/>
                 </g>
             </svg>
-            <img src="{{static}}/img/logo2.png">
+            <img src="{{static}}/img/logo2.png"> -->
+            Panel de control
         </a>
     </div>
 
@@ -57,7 +58,7 @@
                     <li><a href="#/cooperative/credits">Créditos</a></li>
                     <li><a href="#/cooperative/email">Correos</a></li>
                     
-                    <li><a href="#/cooperative/social">Redes Sociales</a></li>
+                    <!-- <li><a href="#/cooperative/social">Redes Sociales</a></li> -->
                     <li><a href="#/cooperative/update">Base de Datos</a></li>
 
                     <li><a href="#/cooperative/terms">Términos y condiciones</a></li>
