--- a/assets/modules/notification/views/form.html
+++ b/assets/modules/notification/views/form.html
@@ -153,12 +153,43 @@
                                         <li ng-click="notification.addUser(user)" ng-repeat="user in notification.autocomplete.suggest"><span>{{user.username}}</span> {{user.name}}</li>
                                     </ul>
 
+
                                 </div>
                                 <div class="form-group col-sm-2">
                                     <button ng-click="notification.suggest()" type="button" class="btn btn-success btn-sm">
                                         <span class="glyphicon glyphicon-search"></span>
                                     </button>
                                 </div>
+                            </div>
+                        </div>
+                    </div>
+
+                    <div ng-show="notification.autocomplete.list.0">
+                        <div class="row">
+                            <div class="form-group col-sm-12">
+                                <label for="inputEmail3" class="control-label">Lista de destinatarios</label>
+                                <div class="table-scroll table-responsive" >
+                                    <table  class="table  table-striped ">
+                                        <thead>                                        
+                                            <tr>
+                                                <th>Documento</th>
+                                                <th>Nombre</th>
+                                                <th>Email</th>
+                                                <th></th>
+                                            </tr>
+                                        </thead>
+                                        <tbody>
+                                            <tr ng-repeat="user in notification.autocomplete.list">
+                                                <td>{{user.username}}</td>
+                                                <td>{{user.name}}</td>
+                                                <td>{{user.email}}</td>                                           
+                                                <td><button ng-click="notification.removeUser(user.username)" type="button" class="btn btn-danger btn-sm">
+                                                <span class="glyphicon glyphicon-remove"></span>
+                                            </button></td>
+                                            </tr>
+                                        </tbody>  
+                                    </table>
+                                </div>                                
                             </div>
                         </div>
                     </div>
