--- a/assets/modules/user/views/form.html
+++ b/assets/modules/user/views/form.html
@@ -85,7 +85,7 @@
                     </div>
                 </div>
             </div>
-            <div class="form-group col-sm-4 image-review">
+            <!-- <div class="form-group col-sm-4 image-review">
                 <div class="row">
                     <div class="col-sm-12">
                         <label class="control-label">Imágen por aprobar</label>
@@ -108,7 +108,7 @@
                         <img ng-src="{{myCroppedImage}}" id="croppedImage"/>
                     </div>
                 </div>
-            </div>
+            </div> -->
         </div>
     </form>
 </div>
