credits, parents and childrens, show users in notifications, show credit request

--- a/assets/css/mixin.less
+++ b/assets/css/mixin.less
@@ -124,7 +124,7 @@
     }
 
     img{
-        background: #959393;
+        // background: #959393;
         box-shadow: 0 8px 6px -6px #000;
     }
 }
