--- a/assets/modules/creditRequest/views/list.html
+++ b/assets/modules/creditRequest/views/list.html
@@ -11,6 +11,8 @@
     <li class="active">Solicitud de créditos</li>
 </ol>
 
+{{creditList.list}}
+
 
 <list-view 
     fields="[
@@ -27,7 +29,7 @@
     
     actions="['edit', 'delete', 'search']"
 
-    rest="credit_request"
+    rest="credit-request"
 
     queryparams="type=1"
 
