--- a/assets/modules/page/views/list.html
+++ b/assets/modules/page/views/list.html
@@ -107,6 +107,7 @@
             </div>
         </div>
         <div>
+          {{pageList.data.access_level}}
             <access-level level="accessLevel" lvl="pageList.data.access_level" section="true"></access-level>
         </div>
 
