--- a/assets/modules/auth/views/login.html
+++ b/assets/modules/auth/views/login.html
@@ -3,7 +3,7 @@
 <div class="row">
     <div class="col-md-offset-4 col-md-5 col-md-offset-4">
             <div class=" text-center login-page ">
-                <img src="{{login.static}}/img/logo.png">
+                <!-- <img src="{{login.static}}/img/logo.png"> -->
                 
                 <h2>
                     ¡Bienvenido!
