deleting all the console.log

--- a/assets/modules/notification/views/form.html
+++ b/assets/modules/notification/views/form.html
@@ -94,9 +94,7 @@
                     </div>                    
                 </div>
 
-            </div>
-
-                      
+            </div>                     
 
             
 
@@ -131,7 +129,7 @@
 
                     </div>
                 </div>
-                <div class="row" >
+                <div class="row" ng-hide="notification.data.public">
                     <div class="form-group col-sm-6">
                         <label for="inputEmail3" class="control-label">Buscar asociados por documento</label>
                         <div class="row">
