fixed credit request

--- a/assets/modules/creditRequest/views/list.html
+++ b/assets/modules/creditRequest/views/list.html
@@ -25,7 +25,7 @@
     
     filters="['search']"    
     
-    actions="['edit', 'delete', 'search']"
+    actions="['edit']"
 
     rest="credit-request"
 
