--- a/assets/modules/cooperative/views/email-list.html
+++ b/assets/modules/cooperative/views/email-list.html
@@ -8,7 +8,7 @@
 <list-view 
     fields="[
         {'name':'name', 'label':'Título', 'type': 'string', width:'40'},
-        {'name':'email', 'label':'Fecha', 'type': 'string'},
+        {'name':'email', 'label':'Email', 'type': 'string'},
         {'name':'type_field', 'label':'Tipo', 'type': 'string'},
     ]"
 
